hard-gists/a42aecb379742d3cd150/run.log
=== Docker Run Log for a42aecb379742d3cd150 ===
Started at: Mi 29. Okt 18:52:41 CET 2025

[2025-10-29 18:52:42] START: Running container for a42aecb379742d3cd150
[2025-10-29 18:52:42] SUCCESS: Container eb4e151178c24415457c59cacc97fcac3ce516cb7727bb151ca1b63cf21ee572 started for a42aecb379742d3cd150
=== Container logs for a42aecb379742d3cd150 ===
  File "/snippet.py", line 41
    print "in onAdd"
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a42aecb379742d3cd150 ===
[2025-10-29 18:52:44] INFO: Container eb4e151178c24415457c59cacc97fcac3ce516cb7727bb151ca1b63cf21ee572 has stopped
